apps/toepen/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: toepen
  namespace: toepen
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: toepen
  template:
    metadata:
      labels:
        app.kubernetes.io/name: toepen
    spec:
      imagePullSecrets:
        - name: ghcr-auth
      terminationGracePeriodSeconds: 30
      containers:
        - name: toepen
          image: ghcr.io/jvz-devx/toepen:main@sha256:325ac627d28c4fd306f7416e5059afa93da56fc85997bc98f5281ed1d69dc6d7 # {"$imagepolicy": "flux-system:toepen"}
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 3
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 20
            periodSeconds: 10
          lifecycle:
            preStop:
              exec:
                command: ["sh", "-c", "sleep 5"]
          resources:
            requests:
              cpu: 25m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
