apps/toepen/ingress.yaml
---
# Public via Cloudflare Tunnel.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: toepen
  namespace: toepen
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns01
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns.alpha.kubernetes.io/target: f4f59044-cc55-41f0-a76a-96fdfeb42dc9.cfargotunnel.com
spec:
  ingressClassName: traefik
  rules:
    - host: toep.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: toepen
                port:
                  number: 3000
    - host: toepen.jensvanzutphen.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: toepen
                port:
                  number: 3000
  tls:
    - hosts:
        - toep.app
        - toepen.jensvanzutphen.com
      secretName: toepen-tls
